--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+/* defaults */
+
 *,
 *::before,
 *::after {
@@ -16,6 +18,18 @@ body {
 	color: white;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
+/* global */
+
+.text-center {
+	text-align: center;
+}
+
+.hidden {
+	display: none;
+}
+
+/* mod list */
 
 #modlist {
 	display: grid;
@@ -43,6 +57,7 @@ body {
 	text-align: center;
 	grid-column-start: 1;
 	grid-column-end: span 2;
+	padding: 0 4em;
 }
 
 #modlist .modentry .modentry-version {
