--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,81 +3,81 @@
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 html,
 body {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-	background-color: #272727;
-	color: white;
-	font-family: Arial, Helvetica, sans-serif;
+  background-color: #272727;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* global */
 
 .text-center {
-	text-align: center;
+  text-align: center;
 }
 
 .hidden {
-	display: none;
+  display: none;
 }
 
 .clickable {
-	cursor: pointer;
-	pointer-events: ;
+  cursor: pointer;
+  pointer-events: ;
 }
 /* mod list */
 
 #modlist {
-	display: grid;
-	gap: 1em;
+  display: grid;
+  gap: 1em;
 }
 
 #modlist .modentry {
-	border: 1px solid white;
-	background-color: #373737;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	padding: 1em;
+  border: 1px solid white;
+  background-color: #373737;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1em;
 }
 
 #modlist .modentry .modentry-name {
-	font-weight: bold;
-	font-size: 1.2em;
-	text-align: center;
-	grid-column-start: 1;
-	grid-column-end: span 2;
+  font-weight: bold;
+  font-size: 1.2em;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: span 2;
 }
 
 #modlist .modentry .modentry-description {
-	font-size: 0.8em;
-	text-align: center;
-	grid-column-start: 1;
-	grid-column-end: span 2;
-	padding: 0 4em;
+  font-size: 0.8em;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: span 2;
+  padding: 0 4em;
 }
 
 #modlist .modentry .modentry-version {
-	text-align: right;
+  text-align: right;
 }
 
 /* mod list - bundle children */
 
-#modlist .modentry .modentry-childred {
-	grid-column-start: 1;
-	grid-column-end: span 2;
+#modlist .modentry .modentry-children {
+  grid-column-start: 1;
+  grid-column-end: span 2;
 }
 
-#modlist .modentry .modentry-childred .modentry-child {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	gap: 0.5em;
-	align-items: center;
+#modlist .modentry .modentry-children .modentry-child {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 0.5em;
+  align-items: center;
 }
